fix: center align like number

--- a/src/blocks/element/__like-button/element__like-button.css
+++ b/src/blocks/element/__like-button/element__like-button.css
@@ -1,5 +1,5 @@
 .element__like-button {
-  width: 24px;
+  width: 22px;
   height: 19px;
   cursor: pointer;
   transition: opacity 0.5s;
