--- a/src/blocks/element/__like-number/element__like-number.css
+++ b/src/blocks/element/__like-number/element__like-number.css
@@ -3,5 +3,5 @@
   line-height: 15px;
   font-weight: 400;
   text-align: center;
-  margin: 3px 0 0;
+  margin: 3px auto 0;
 }
