--- a/src/blocks/element/__like/element__like.css
+++ b/src/blocks/element/__like/element__like.css
@@ -2,4 +2,5 @@
   width: 24px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
